Change to JNI-first and make FFM optional/experimental